<resources>
    <string name="app_name">Calculator</string>
    <string name="on">ON</string>
    <string name="off">OFF</string>
    <string name="_8">8</string>
    <string name="_5">5</string>
    <string name="_2">2</string>
    <string name="_0">0</string>
    <string name="ac">AC</string>
    <string name="_9">9</string>
    <string name="_6">6</string>
    <string name="_3">3</string>
    <string name="_dot">.</string>
    <string name="div">/</string>
    <string name="x">X</string>
    <string name="min">-</string>
    <string name="plus">+</string>
    <string name="equal">=</string>
    <string name="value">0</string>
</resources>